--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "basic-auth": "^2.0.1",
     "connect-redis": "^3.4.0",
+    "eslint": "^5.12.0",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "handlebars": "^4.0.12",
