--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-http-header-token": "^1.1.0",
-    "passport-ldapauth": "^2.1.1"
+    "passport-ldapauth": "^2.1.1",
+    "passport-slack": "0.0.7",
+    "passport-twitter": "^1.0.4"
   }
 }
