--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An auth adapter for Amphora",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint *.js",
+    "lint": "eslint --max-warnings 0 *.js",
     "test": "npm run lint && jest"
   },
   "author": "",
@@ -28,6 +28,7 @@
     "through2-map": "^3.0.0"
   },
   "devDependencies": {
+    "coveralls": "^3.0.3",
     "eslint": "^5.12.0",
     "jest": "^24.1.0",
     "levelup": "^1.3.9",
