--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --max-warnings 0 *.js",
-    "test": "npm run lint && jest"
+    "test": "npm run lint && jest",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "author": "",
   "license": "MIT",
