--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "basic-auth": "^2.0.1",
-    "bcrypt": "^3.0.4",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.3",
     "clay-log": "^1.3.1",
     "clayhandlebars": "^3.2.6",
