--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --max-warnings 0 *.js",
-    "test": "npm run lint && jest",
+    "test": "npm run lint && jest && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "author": "",
