--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --max-warnings 0 *.js",
-    "test": "npm run lint && jest"
+    "test": "npm run lint && jest",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "basic-auth": "^2.0.1",
-    "bcrypt": "^3.0.4",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.3",
     "clay-log": "^1.3.1",
     "clayhandlebars": "^3.2.6",
