--- a/.github/npm/Dockerfile
+++ b/.github/npm/Dockerfile
@@ -2,8 +2,8 @@ FROM node:10.15-alpine
 
 LABEL "com.github.actions.name"="Lint and Test"
 LABEL "com.github.actions.description"="Lints and runs tests then sends the coverage to coveralls"
-LABEL "com.github.actions.icon"="zap"
-LABEL "com.github.actions.color"="green"
+LABEL "com.github.actions.icon"="activity"
+LABEL "com.github.actions.color"="blue"
 
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
