--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.3",
     "clay-log": "^1.3.1",
-    "clayhandlebars": "clay/handlebars#handlebars_peer_dependency",
+    "clayhandlebars": "5.0.2-0",
     "connect-redis": "^3.4.0",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
