--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "amphora-auth",
-  "version": "2.0.0-0",
+  "version": "1.3.2",
   "description": "An auth adapter for Amphora",
   "main": "index.js",
   "scripts": {
